feat: implement Facebook authentication feature with error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
